--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			</div>
 
 			<section id="header">
+				<span id="close" class="hide"><i class="fa fa-times fa-lg"></i></span>
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Manpreet Singh</a></h1>
