--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
+										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
+										<li class="icon solid fa-leaf">Spring</li>
+										<li class="icon brands fa-css3-alt">CSS</li>
+										<li class="icon brands fa-java">Java</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon brands fa-js-square">JavaScript</li>
+										<li class="icon brands fa-html5">HTML</li>
+										<li class="icon solid fa-code-branch">Git, SVN</li>
+										<li class="icon solid fa-network-wired">REST API</li>
 									</ul>
 								</div>
 							</section>
