Added title in experience section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 											<h4>Sopra Banking Software</h4>
 										</div>
 										<div class="detail">
+											<p>Senior Software Engineer</p>
 											<p>2020 - Present</p>
 											<ul>
 												<li>Involved in development of new features for Cassiopae (a product in Sopra Financing Platform).</li>
