--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Manpreet Singh</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<p>Senior Software Engineer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -35,7 +34,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/themanpreetsingh" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
@@ -59,7 +58,7 @@
 										<p>Just an incredibly simple portfolio<br />
 										one line heading.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am a senior software engineer with 2+ years experience of working in a fintech product based company. I'm passionate about technology and making a positive impact.</p>
 								</div>
 							</section>
 
