--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hi, I'm Manpreet Singh</h2>
-										<p>Just an incredibly simple portfolio<br />
-										one line heading.</p>
+										<p>Just an incredibly simple portfolio<br /></p>
 									</header>
 									<p>I am a senior software engineer with 2+ years experience of working in a fintech product based company. I'm passionate about technology and making a positive impact.</p>
 								</div>
@@ -66,7 +65,8 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p> I'm always ready to learn any technology based on the requirements as I believe that technologies are like various tools in a developer's toolbox. 
+										My skillset includes:</p>
 									<ul class="feature-icons">
 										<li class="icon brands fa-js-square">JavaScript</li>
 										<li class="icon brands fa-java">Java</li>
@@ -80,6 +80,8 @@
 										<li class="icon fa-object-group">Object Oriented Design(OOP)</li>
 										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
 										<li class="icon brands fa-linux">Linux</li>
+										<li class="icon solid fa-tools">Maven, Apache Tomcat</li>
+										<li class="icon brands fa-react">React</li>
 									</ul>
 								</div>
 							</section>
@@ -88,26 +90,26 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Cool projects coming soon!</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>Awesome Project</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4>Fantastic Project</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
+												<h4>Incredible Project</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
