--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 										<li class="icon solid fa-code">Data Structures & Algorithms</li>
 										<li class="icon brands fa-angular">Angular, Jasmine, Karma</li>
 										<li class="icon fa-object-group">Object Oriented Design(OOP)</li>
-										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
-										<li class="icon brands fa-linux">Linux</li>
 										<li class="icon solid fa-tools">Maven, Apache Tomcat</li>
 										<li class="icon brands fa-react">React</li>
+										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
+										<li class="icon brands fa-linux">Linux</li>
 									</ul>
 								</div>
 							</section>
@@ -145,6 +145,14 @@
 							<section id="five">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
+									<ul>
+										<li>Won 3rd prize in RTU National Hackathon out of 126 teams for 'Prevention of phishing in online wallets (Paytm)'</li>
+										<li>Cleared GATE-2020</li>
+										<li>Successfully completed JPMorgan Chase & Co. Virtual Experience Internship Program by InsideSherpa</li>
+										<li>Successfully completed Microsoft Engineering Virtual Experience Internship Program by InsideSherpa</li>
+										<li>Founder & President (2018-2021) of Cyber Security Club</li>
+										<li>Attended workshop on Cyber Security by Ben Holland at MNIT</li>
+									</ul>
 								</div>
 							</section>
 
@@ -153,6 +161,13 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<div>
+										<ul>
+											<li><a href="https://github.com/themanpreetsingh" class="icon brands fa-github"><span>Github</span></a></li>
+											<li><a href="#" class="icon solid fa-envelope"><span>Email</span></a></li>
+											<li><a href="#" class="icon brands fa-linkedin"><span>LinkedIn</span></a></li>
+										</ul>
+									</div>
 								</div>
 							</section>
 					
