--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 								<div class="container">
 									<h3>Experience</h3>
 									<div class="experience">
+										<h4>Senior Software Engineer</h4>
 										<div class="container small company">
 											<img class="image logo" src="images/SBSlogo.jpg" alt="Logo">
-											<h4>Sopra Banking Software</h4>
+											<h5>Sopra Banking Software</h5>
 										</div>
 										<div class="detail">
-											<p>Senior Software Engineer</p>
 											<p>2020 - Present</p>
 											<ul>
 												<li>Involved in development of new features for Cassiopae (a product in Sopra Financing Platform).</li>
