Added a new project

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 										<li class="icon solid fa-leaf">Spring</li>
 										<li class="icon solid fa-code-branch">Git, SVN</li>
 										<li class="icon solid fa-network-wired">REST API</li>
-										<li class="icon solid fa-code">Data Structures & Algorithms</li>
+										<li class="icon brands fa-react">React</li>
 										<li class="icon brands fa-angular">Angular, Jasmine, Karma</li>
 										<li class="icon fa-object-group">Object Oriented Design(OOP)</li>
 										<li class="icon solid fa-tools">Maven, Apache Tomcat</li>
-										<li class="icon brands fa-react">React</li>
+										<li class="icon solid fa-code">Data Structures & Algorithms</li>
 										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
 										<li class="icon brands fa-linux">Linux</li>
 									</ul>
@@ -93,10 +93,10 @@
 									<p>Cool projects coming soon!</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://themanpreetsingh.github.io/grocery-app/" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Awesome Project</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Grocery Store</h4>
+												<p>Click on the thumbnail to navigate to the deployed project</p>
 											</div>
 										</article>
 										<article>
@@ -162,7 +162,7 @@
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div>
-										<ul>
+										<ul class="contact-list">
 											<li><a href="https://github.com/themanpreetsingh" class="icon brands fa-github"><span>Github</span></a></li>
 											<li><a href="#" class="icon solid fa-envelope"><span>Email</span></a></li>
 											<li><a href="#" class="icon brands fa-linkedin"><span>LinkedIn</span></a></li>
