Added thumbnail for project

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<p>Cool projects coming soon!</p>
 									<div class="features">
 										<article>
-											<a href="https://themanpreetsingh.github.io/grocery-app/" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://themanpreetsingh.github.io/grocery-app/" class="image"><img src="images/groceryStore.png" alt="" /></a>
 											<div class="inner">
 												<h4>Grocery Store</h4>
 												<p>Click on the thumbnail to navigate to the deployed project</p>
