Added link in project title

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<article>
 											<a href="https://themanpreetsingh.github.io/grocery-app/" class="image"><img src="images/groceryStore.png" alt="" /></a>
 											<div class="inner">
-												<h4>Grocery Store</h4>
+												<a href="https://themanpreetsingh.github.io/grocery-app/"><span>Grocery Store</span></a>
 												<p>Click on the thumbnail to navigate to the deployed project</p>
 											</div>
 										</article>
@@ -103,14 +103,14 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Fantastic Project</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, officiis.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Incredible Project</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quia?</p>
 											</div>
 										</article>
 									</div>
@@ -160,7 +160,7 @@
 							<section id="six">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, sint!</p>
 									<div>
 										<ul class="contact-list">
 											<li><a href="https://github.com/themanpreetsingh" class="icon brands fa-github"><span>Github</span></a></li>
