Added a new project

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://technokingreviews.wordpress.com/" class="image"><img src="images/gadgetWebsiteThumbnail.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Fantastic Project</h4>
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, officiis.</p>
+												<a href="https://technokingreviews.wordpress.com/"><span>Gadget Review Website</span></a>
+												<p>Built using Wordpress</p>
 											</div>
 										</article>
 										<article>
