Updated filename for image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://technokingreviews.wordpress.com/" class="image"><img src="images/gadgetWebsiteThumbnail.jpg" alt="" /></a>
+											<a href="https://technokingreviews.wordpress.com/" class="image"><img src="images/gadgetWebsiteThumbnail.png" alt="" /></a>
 											<div class="inner">
 												<a href="https://technokingreviews.wordpress.com/"><span>Gadget Review Website</span></a>
 												<p>Built using Wordpress</p>
