--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 										<li class="icon solid fa-code">Data Structures & Algorithms</li>
 										<li class="icon solid fa-database">Oracle PL/SQL, MySQL, MongoDB(NoSQL)</li>
 										<li class="icon brands fa-linux">Linux</li>
+										<li class="icon brands fa-wordpress-simple">Wordpress</li>
 									</ul>
 								</div>
 							</section>
