Added link to linkedin profile

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 										<ul class="contact-list">
 											<li><a href="https://github.com/themanpreetsingh" class="icon brands fa-github"><span>Github</span></a></li>
 											<li><a href="#" class="icon solid fa-envelope"><span>Email</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin"><span>LinkedIn</span></a></li>
+											<li><a href="https://www.linkedin.com/in/manpreet5singh" class="icon brands fa-linkedin"><span>LinkedIn</span></a></li>
 										</ul>
 									</div>
 								</div>
