--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="google-site-verification" content="kFVa5xvs57i1R3nEl9bu-DrrqQGEJNRJ_LyTDD_36e0" />
 	</head>
 	<body class="is-preload">
 
