Styling for project titles

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 										<article>
 											<a href="https://themanpreetsingh.github.io/grocery-app/" class="image"><img src="images/groceryStore.png" alt="" /></a>
 											<div class="inner">
-												<a href="https://themanpreetsingh.github.io/grocery-app/"><span>Grocery Store</span></a>
+												<a href="https://themanpreetsingh.github.io/grocery-app/"><h4 class="link">Grocery Store</h4></a>
 												<p>Click on the thumbnail to navigate to the deployed project</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://technokingreviews.wordpress.com/" class="image"><img src="images/gadgetWebsiteThumbnail.png" alt="" /></a>
 											<div class="inner">
-												<a href="https://technokingreviews.wordpress.com/"><span>Gadget Review Website</span></a>
+												<a href="https://technokingreviews.wordpress.com/"><h4 class="link">Gadget Review Website</h4></a>
 												<p>Built using Wordpress</p>
 											</div>
 										</article>
