--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section id="header">
 				<span id="close" class="hide"><i class="fa fa-times fa-lg"></i></span>
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Manpreet Singh</a></h1>
 					<p>Senior Software Engineer</p>
 				</header>
